--- a/templates/accounts/sign-in.html
+++ b/templates/accounts/sign-in.html
@@ -1,38 +1,41 @@
-{% extends 'base.html'%}
+{% extends 'base_2.html'%}
+{% load static %}
 {% block title %}INIO - Inicio Sesion{% endblock title %}
 
 {% block page_content %}
 
+<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100 p-4">
+    <div class="mb-8 w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg">
+        <img src="{% static 'img/logo_CP_hor_800px.png' %}" alt="Logo Canal de Panama" class="w-full h-auto object-contain">
+    </div>
 
-<div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
-    <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Iniciar Sesión</h2>
+    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+        <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Autenticacion Requerida</h2>
+        <p class="text-center text-sm font-black mb-8">Ingrese Sus Credenciales</p>
 
-    <form action="#" method="POST">
-        {% csrf_token %}
-        <div class="mb-4">
-            <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Correo Electrónico</label>
-            <input type="email" id="email" name="email" required
-                   class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out"
-                   placeholder="tu@email.com">
-        </div>
+        <form action="#" method="POST">
+            {% csrf_token %}
+            <div class="mb-4">
+                <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Correo Electrónico</label>
+                <input type="email" id="email" name="email" required
+                       class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary-brand focus:border-primary-brand transition duration-150 ease-in-out"
+                       placeholder="tu@email.com">
+            </div>
 
-        <div class="mb-6">
-            <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Contraseña</label>
-            <input type="password" id="password" name="password" required
-                   class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-150 ease-in-out"
-                   placeholder="********">
-            <a href="#" class="text-xs text-blue-600 hover:underline mt-1 block text-right">¿Olvidaste tu contraseña?</a>
-        </div>
+            <div class="mb-6">
+                <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Contraseña</label>
+                <input type="password" id="password" name="password" required
+                       class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-primary-brand focus:border-primary-brand transition duration-150 ease-in-out"
+                       placeholder="********">
+                <a href="#" class="text-xs text-blue-600 hover:underline mt-1 block text-right">¿Olvidaste tu contraseña?</a>
+            </div>
 
-        <button type="submit"
-                class="w-full bg-blue-600 text-white py-2 px-4 rounded-md font-semibold hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-150 ease-in-out">
-            Ingresar
-        </button>
-
-        <!-- <p class="text-sm text-center text-gray-600 mt-4">
-            ¿No tienes una cuenta? <a href="#" class="text-blue-600 hover:underline font-medium">Regístrate aquí</a>
-        </p> -->
-    </form>
+            <button type="submit"
+                    class="w-full bg-[#c1323e] text-white py-2 px-4 rounded-md font-semibold hover:bg-primary-brand focus:outline-none focus:ring-2 focus:ring-primary-brand focus:ring-offset-2 transition duration-150 ease-in-out">
+                Ingresar
+            </button>
+        </form>
+    </div>
 </div>
 
 {% endblock page_content%}
