--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
     <title>{% block title %}{% endblock title %}</title> 
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     {% tailwind_css %}
-
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
@@ -30,9 +31,10 @@
             <i class="fas fa-bars"></i>
         </button>
 
-        <aside id="sidebar" class="fixed inset-y-0 left-0 z-10 w-64 bg-blue-800 text-blue-100 p-4 transform -translate-x-full transition-transform duration-300 ease-in-out md:relative md:translate-x-0 md:flex md:flex-col shadow-lg">
+        <aside id="sidebar" class="fixed inset-y-0 left-0 z-10 w-64 bg-primary-brand text-blue-100 p-4 transform -translate-x-full transition-transform duration-300 ease-in-out md:relative md:translate-x-0 md:flex md:flex-col shadow-lg">
             <div class="flex items-center justify-between mb-6 px-2">
-                <a href="{% url 'home:home' %}" class="text-2xl font-bold text-white hover:text-blue-200 transition-colors"> <i class="fas fa-rocket mr-2"></i> INIO Database
+                <a href="{% url 'home:home' %}" class="text-2xl font-bold text-white hover:text-blue-200 transition-colors"> 
+                    <img src="{% static 'img/logo_acp_bw.png'%}" alt="logo-acp-home">
                 </a>
                 <button title="button2" type="button" id="close-menu-button" class="md:hidden text-blue-200 hover:text-white focus:outline-none">
                     <i class="fas fa-times"></i>
@@ -43,62 +45,64 @@
                 <ul class="space-y-2">
                     
                     <li>
-                        <a href="{% url 'proyectos_c:proyectos_c' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'project_list' %}active{% endif %}"> <i class="fas fa-folder-open w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="{% url 'proyectos_c:proyectos_c' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'project_list' %}active{% endif %}"> <i class="fas fa-hard-hat w-6 mr-3 text-center text-white"></i>
                             Proyectos CC
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'proyectos_e:proyectos_e' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="{% url 'proyectos_e:proyectos_e' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-wrench w-6 mr-3 text-center text-white"></i>
                             Proyectos E
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-shield-alt w-6 mr-3 text-center text-white"></i>
                             Proyectos SE
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-clipboard-list w-6 mr-3 text-center text-white"></i>
                             Proyectos CM
                         </a>
                     </li>
-                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'estimate_list' %}active{% endif %}"> <i class="fas fa-file-invoice-dollar w-6 mr-3 text-center text-blue-300"></i>
-                            SIA
-                        </a>
-                    </li>
+                     
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'hour_log_list' %}active{% endif %}"> <i class="fas fa-clock w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'hour_log_list' %}active{% endif %}"> <i class="fas fa-file-contract w-6 mr-3 text-center text-white"></i>
                             Licitaciones
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'contratos:contratos' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
-                            <i class="fas fa-tachometer-alt w-6 mr-3 text-center text-blue-300"></i>
+                        <a href="{% url 'contratos:contratos' %}" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+                            <i class="fas fa-handshake w-6 mr-3 text-center text-white"></i>
                             Contratos
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-blue-700 hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
-                            <i class="fas fa-tachometer-alt w-6 mr-3 text-center text-blue-300"></i>
-                            Dashboard
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+                            <i class="fas fa-info-circle w-6 mr-3 text-center text-white"></i>
+                            SIA
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="sidebar-link flex items-center px-4 py-2.5 rounded-md hover:bg-primary-accent hover:text-white transition-colors duration-200 {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+                            <i class="fas fa-chart-line w-6 mr-3 text-center text-white"></i>
+                            Reportes
                         </a>
                     </li>
                     </ul>
             </nav>
 
-            <div class="mt-auto pt-4 border-t border-blue-700">
-                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-blue-700 hover:text-white transition-colors duration-200">
+            <div class="mt-auto pt-4 border-t border-primary-accent">
+                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-primary-accent hover:text-white transition-colors duration-200">
                     <i class="fas fa-cog w-6 mr-3 text-center"></i>
                     Settings
                 </a>
                 {% if user.is_authenticated%}
-                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-blue-700 hover:text-white transition-colors duration-200">
+                <a href="{% url 'accounts:sign-out'%}" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-primary-accent hover:text-white transition-colors duration-200">
                     <i class="fas fa-sign-out-alt w-6 mr-3 text-center"></i>
                     Cerrar Sesion
                 </a>
                 {% else %}
-                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-blue-700 hover:text-white transition-colors duration-200">
+                <a href="#" class="flex items-center px-4 py-2.5 rounded-md text-blue-200 hover:bg-primary-accent hover:text-white transition-colors duration-200">
                     <i class="fas fa-sign-in-alt w-6 mr-3 text-center"></i>
                     Iniciar Sesion
                 </a>
