--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,7 +5,7 @@
 <div class="container mx-auto p-4 md:p-8">
     
     {% if request.user.username|title %}
-    <h2 class="text-3xl font-semibold text-gray-800 text-center mb-8">Menu Principal</h2>
+    <h2 class="text-3xl  text-primary-accent font-bold text-center mb-8">Menu Principal</h2>
         <!-- <a href="{% url 'accounts:sign-out' %}">Hi {{user.username}}, Sign Out</a> -->
          {% include 'home/cards.html' %}
     {% else %}
