--- a/templates/sia/sia_list.html
+++ b/templates/sia/sia_list.html
@@ -3,10 +3,10 @@
 <div class="container mx-auto px-4 py-8">
 
     <div class="mb-6"> 
-        <h1 class="text-3xl font-semibold text-gray-800 mb-6">Proyectos CC</h1>
-        <button id="add-button" type="button" class="bottom-8 right-8 px-3 py-2 text-white bg-primary-brand hover:bg-primary-accent font-bold rounded-lg shadow-md transition duration-150 ease-in-out"><i class="fas fa-add mr-1"></i>Nuevo</button>
+        <h1 class="text-3xl font-semibold text-gray-800 mb-6">SIA de Proyectos</h1>
+        <button id="add-button" type="button" class="bottom-8 right-8 px-3 py-2 text-white bg-blue-600 hover:bg-blue-700 font-bold rounded-lg shadow-md transition duration-150 ease-in-out"><i class="fas fa-add mr-1"></i>Nuevo</button>
         <h3>Total Registros: {{total_proyectos}}</h3>
-        <form method="GET" action="{% url 'proyectos_c:proyectos-c-list' %}" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
+        <form method="GET" action="{% url 'SIA:lista_sia' %}" class="flex items-center space-x-2 bg-white p-3 rounded-lg shadow">
             <input
                 type="search"
                 name="q"
@@ -16,7 +16,7 @@
             >
             <button
                 type="submit"
-                class="bg-primary-brand hover:bg-primary-accent text-white font-semibold px-5 py-2 rounded-r-md transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1"
+                class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-5 py-2 rounded-r-md transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1"
             >
                 <i class="fas fa-search mr-1"></i> {# Font Awesome icon #}
                 Buscar
@@ -226,4 +226,4 @@
 
 
 
-{% endblock page_content %}
+{% endblock page_content %}ntent %}
