--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 <body class=" min-h-screen bg-gray-100 font-sans">
 
-    <div class="flex min-h-screen bg-gray-100">
+    <div class="flex min-h-screen bg-gray-100 ">
 
         <button title="button1" type="button" id="mobile-menu-button" class="fixed top-4 left-4 z-20 p-2 text-gray-600 bg-white rounded-md shadow-md md:hidden focus:outline-none focus:ring-2 focus:ring-blue-500">
             <i class="fas fa-bars"></i>
@@ -111,10 +111,10 @@
             </div>
         </aside>
 
-        <main class="flex-1 p-3 ">
+        <main class="flex-1  ">
             
 
-            <div class="bg-white p-3 rounded-lg shadow-md min-h-screen flex justify-center items-center">
+            <div class="bg-white p-3 rounded-lg shadow-md  flex justify-center items-center">
                 {% block page_content %}
                 {% endblock page_content %}
             </div>
