--- a/templates/proyectos_c/proyectos_c-list-elements.html
+++ b/templates/proyectos_c/proyectos_c-list-elements.html
@@ -2,8 +2,8 @@
 
 {% for item in page_obj %}
 
-<card>
-    <div class="block bg-white rounded-lg border border-gray-200 hover:border-primary-brand shadow-lg hover:scale-[1.02] transition-all duration-200 ease-in-out">
+<card >
+    <div class="block bg-white rounded-lg border border-gray-200 my-3 hover:border-primary-brand shadow-lg hover:scale-[1.02] transition-all duration-200 ease-in-out">
             
             <div class="p-5">
                 <h3 class="text-xl font-semibold text-blue-900 mb-2">{{item.codigo}}</h3>
