--- a/templates/proyectos_c/proyectos_c_list.html
+++ b/templates/proyectos_c/proyectos_c_list.html
@@ -34,9 +34,23 @@
                 <div class="p-5">
                     <h3 class="text-xl font-semibold text-blue-900 mb-2">{{item.codigo}}</h3>
                     <p class="text-gray-600 text-sm mb-4">{{item.title}}</p>
-                    {% for x in item.proyectos_CC_estimador_relation.all %}
-                    <p class="text-gray-600 text-sm mb-4">Estimador: {{x.estimador.initials}}</p>
-                    {% endfor %}
+                      <div>
+                        <label class="block text-sm font-medium text-gray-500">Especificador(es)</label>
+                            <div id="display-especificador" class="mt-1 flex flex-wrap gap-2">
+                            {% for x in item.proyectos_CC_especificador_relation.all %}
+                            <span class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded">{{x.especificador.iniciales}}</span>
+                            {% endfor %}
+                             </div>
+                            </div>
+
+                   <div>
+                    <label class="block text-sm font-medium text-gray-500">Estimador(es)</label>
+                    <div id="display-estimador" class="mt-1 flex flex-wrap gap-2">
+                        {% for x in item.proyectos_CC_estimador_relation.all %}
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded">{{x.estimador.initials}}</span>
+                        {% endfor %}
+                    </div>
+                    </div>
                     <p class="text-gray-600 text-sm mb-4">Estado:
                         <span class="
         px-3 py-1 inline-flex text-sm leading-5 font-semibold rounded-full
