--- a/templates/proyectos_c/proyecto_c_detail.html
+++ b/templates/proyectos_c/proyecto_c_detail.html
@@ -30,6 +30,15 @@
             </div>
         </div>
         <div>
+            <label class="block text-sm font-medium text-gray-500">Estimado Conceptual:</label>
+            <div id="display-connceptual" class="mt-1 flex flex-wrap gap-2">
+                {% for rel in proyecto.proyectos_CC_estimado_conceptual_cc.all %}
+                <span class="bg-green-100 text-green-800 text-sm font-medium px-2.5 py-0.5 rounded">
+                    {{ rel.estimado_conceptual.codigo }}</span>
+                    {% endfor %}
+            </div>
+        </div>
+        <div>
             <label class="block text-sm font-medium text-gray-500">Coordinador</label>
             <p id="display-title" class="mt-1 text-lg text-gray-900">{{proyecto.coordinador}}</p>
         </div>
