--- a/templates/home/cards.html
+++ b/templates/home/cards.html
@@ -28,7 +28,7 @@
         </div>
     </a>
 
-    <a href="#" class="block bg-white rounded-lg border border-gray-200 hover:border-primary-brand shadow-lg hover:scale-[1.02] transition-all duration-200 ease-in-out"> {# Added border, hover:border-indigo-500, shadow-lg, hover:scale #}
+    <a href="{% url 'licitaciones:licitaciones' %}" class="block bg-white rounded-lg border border-gray-200 hover:border-primary-brand shadow-lg hover:scale-[1.02] transition-all duration-200 ease-in-out"> {# Added border, hover:border-indigo-500, shadow-lg, hover:scale #}
         <div class="flex flex-col items-center text-center p-6">
             <i class="fas fa-file-contract text-8xl text-primary-brand mb-3"></i>
             <h3 class="text-lg font-semibold text-gray-800">Licitaciones</h3>
