management command import_contratos

--- a/templates/licitaciones/licitaciones_detail.html
+++ b/templates/licitaciones/licitaciones_detail.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="bg-white shadow-lg rounded-lg overflow-hidden mb-8">
-        <div class="bg-blue-900 text-white p-4">
+        <div class="bg-blue-900  p-4">
             <h1 class="text-2xl font-bold">Licitación: {{ licitacion.rfq }}</h1>
         </div>
         <div class="p-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-4 text-gray-700">
@@ -75,7 +75,34 @@
 
     {% if licitacion.enmiendas.all %}
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="bg-gray-100 p-4 border-b">
+            <h2 class="text-xl font-semibold text-gray-800">Enmiendas</h2>
         </div>
+        <div class="overflow-x-auto">
+            <table class="min-w-full text-sm text-left text-gray-500">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">Número de Enmienda</th>
+                        <th scope="col" class="px-6 py-3">Fecha</th>
+                        <th scope="col" class="px-6 py-3">Descripción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for enmienda in licitacion.enmiendas.all %}
+                    <tr class="bg-white border-b hover:bg-gray-50">
+                        <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">{{ enmienda.enmienda_id }}</td>
+                        <td class="px-6 py-4">{{ enmienda.fecha_enmienda }}</td>
+                        <td class="px-6 py-4">{{ enmienda.enmienda_desc }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="3" class="px-6 py-4 text-center text-gray-500">No se encontraron enmiendas para esta licitación.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
     {% endif %}
 
 </div>
